# timelog-commander

./: .editorconfig  .gitignore  Makefile  README.adoc  pyproject.toml
src/: main.py  server.py
src/static/: styles.css
src/templates/: app.html  login.html  report.html  settings.html  timer.html
